# vcd2image

./: .coverage  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  link-check-config.json  nightly.yml
docs/: CONSTRAINTS.md
examples/: EXAMPLES.md  example.py  timer
examples/01_basic_extraction/: signals.json
examples/02_auto_plotting/plots/: clocks.json  internals.json  outputs.json  resets.json
examples/03_enhanced_plotting/: signal_analysis_report.md
examples/03_enhanced_plotting/plots/: all_ports.csv  all_ports.json  all_signals.csv  all_signals.json  input_ports.csv  output_ports.csv  output_ports.json
examples/plots/: signal_data.csv
scripts/: SCRIPTS.md  clean.sh  generate-coverage.sh  github_ops.sh  install.sh  setup-testing.sh  test.sh
src/: __init__.py  main.py
src/vcd2image/: __init__.py
src/vcd2image.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vcd2image/cli/: __init__.py  main.py
src/vcd2image/core/: __init__.py  categorizer.py  extractor.py  generator.py  models.py  multi_renderer.py  parser.py  renderer.py  sampler.py  signal_plotter.py  verilog_parser.py
src/vcd2image/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_categorizer.py  test_cli.py  test_config.py  test_extractor.py  test_generator.py  test_models.py  test_multi_renderer.py  test_parser.py  test_renderer.py  test_sampler.py  test_signal_plotter.py  test_verilog_parser.py
tests/test_data/: README.md  bad.vcd  counter.v  timer.vcd
